--- a/src/web/views/_head.ejs
+++ b/src/web/views/_head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>api4ai</title>
+    <title>CapOfPro</title>
     <link href="/daisyui@5.css" rel="stylesheet" type="text/css"/>
     <script src="/browser@4.js"></script>
     <script type="text/javascript" src="/vue.min.js"></script>
@@ -10,7 +10,7 @@
     </style>
     <script type="text/javascript">
         document.documentElement.setAttribute("data-theme", "light");
-        <%- include(`${appcfg.nodeModulesPath}/aframework/web/js/_jslib.js`); %>
+        <%- include(`${appcfg.nodeModulesPath}/aframework/webpage/js/_jslib.js`); %>
         <%- include('apistub.gen.js'); %>
         // APICaller.addResponseInterceptor(async function (response) {
         //     if (response.code === 'need_login') {
@@ -20,9 +20,9 @@
         //     }
         // });
     </script>
-    <%- include(`${appcfg.nodeModulesPath}/aframework/web/_toast.ejs`); %>
+    <%- include(`${appcfg.nodeModulesPath}/aframework/webpage/_toast.ejs`); %>
 </head>
 <body class="flex justify-center">
-<div class="flex flex-col h-full lg:w-2/3 mx-auto p-2 md:p-3 space-y-3 overflow-y-auto custom-scrollbar"
+<div class="flex flex-col h-full lg:w-2/3 mx-auto p-2 md:p-3 space-y-2 overflow-y-auto custom-scrollbar"
      id="mainContainer">
     <!------>
