--- a/src/web/views/reports/big.trade.report.ejs
+++ b/src/web/views/reports/big.trade.report.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('_head.ejs'); %>
+<%- include(`${appcfg.app.rootFolder}/node_modules/web_resources/src/web/templates/_top.ejs`); %>
 <!--------------------------------------------------------------------------------------------------------------------->
 <div class=" w-full bg-neutral text-neutral-content shadow-sm card p-2" v-for="i in [11,1,1,1,1]">
     <p>
@@ -10,8 +10,8 @@
     <p class="label-xs text-neutral-content">2025-08-07 by CapOfPro</p>
 </div>
 <!--------------------------------------------------------------------------------------------------------------------->
-<%- include('_bottom.ejs'); %>
+<%- include(`${appcfg.app.rootFolder}/node_modules/web_resources/src/web/templates/_bottom.ejs`); %>
 <script type="text/javascript">
-    <%- include('big.trade.report.js'); %>
+    <%- include(`${appcfg.app.rootFolder}/src/web/views/reports/big.trade.report.js`); %>
 </script>
 </html>
