--- a/src/web/views/reports/big.trade.report.ejs
+++ b/src/web/views/reports/big.trade.report.ejs
@@ -2,12 +2,17 @@
 <html lang="en">
 <%- include(`${appcfg.app.rootFolder}/node_modules/web_resources/src/web/templates/_top.ejs`); %>
 <!--------------------------------------------------------------------------------------------------------------------->
-<div class=" w-full bg-neutral text-neutral-content shadow-sm card p-2" v-for="i in [11,1,1,1,1]">
+
+重仓交易
+<div class=" w-full bg-neutral text-neutral-content shadow-sm card p-2" v-for="trade in bigTradesList">
     <p>
-        <span style="color: red;">机构大额买入</span>
-        A card component has a figure, a body part, and inside body there are title and actions parts
+        大宗交易 &nbsp;&nbsp; <span style="color: red;">${trade.stockId}</span> &nbsp;&nbsp;
+        ${stockMap[trade.stockId].title}<br>
+        买入机构 &nbsp;&nbsp; <span style="color: red;">${instMap[trade.instBuyId].title}</span> <br>
+        卖出机构 &nbsp;&nbsp; <span style="color: green;">${instMap[trade.instSellId].title}</span><br>
+        交易金额 &nbsp;&nbsp; <span style="color: red;"> ${parseFloat(trade.tradeAmount)}万元</span><br>
+        交易日期 &nbsp;&nbsp; ${trade.dateInt}
     </p>
-    <p class="label-xs text-neutral-content">2025-08-07 by CapOfPro</p>
 </div>
 <!--------------------------------------------------------------------------------------------------------------------->
 <%- include(`${appcfg.app.rootFolder}/node_modules/web_resources/src/web/templates/_bottom.ejs`); %>
